--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,17 +29,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "#", class: "navbar-brand" do %>
+        <%= link_to "/", class: "navbar-brand" do %>
           HowToDo
         <% end %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to "Home", "#" %></li>
+          <li class="active"><%= link_to "Home", "/" %></li>
+        </ul>
+        <ul class = "nav navbar-nav"><%= link_to "new_user_seeion_path", "/" %></li>
+
         </ul>
       </div>
     </div>
   </nav>
+
+
   <div class="container">
     <% flash.each do |name, msg| %>
       <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
