--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
         <th>Title</th>
         <th>Description</th>
         <th>Due by</th>
-        <th colspan="3"></th>
+        <th colspan="3">Options</th>
       </tr>
     </thead>
 
